--- a/htmls/quicksearch.html
+++ b/htmls/quicksearch.html
@@ -14,7 +14,7 @@
 		<div class="container">
 		  <nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">CSS速查表  Quick Search</strong>
+				<strong class="has-text-info is-size-6-mobile">CSS速查表QuickSearch</strong>
 				<a class="button is-link m-copy m-start">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
